# vaporlight

./: .gitignore  AUTHORS  HACKING  README  build.sbt  deploy.sh  logback.xml
config/openocd/: vaporlight.cfg
hardware/: vl4e3.brd  vl4e3.sch  vl4e3p.brd  vl4e3p.sch
hardware/eagle-libraries/: ihlp-4040dz-er-4r7.lbr  tps40055.lbr
misc/: corner-protector.scad
pyVaporlight/: README.md  config.json  config.py  pip_packets  rainbow.py  todo.txt  vacuum.py  vaporbus.py  vapord.py  vapormanager.py  vapornet.py  vaporprotocol.py
src/main/resources/: application.conf
src/main/scala/de/entropia/vapor/daemon/: Application.scala
src/main/scala/de/entropia/vapor/daemon/config/: Config.scala  Settings.scala
src/main/scala/de/entropia/vapor/daemon/hardware/: Buffer.scala  Encoder.scala  Framer.scala  Hardware.scala  Mapping.scala  Physical.scala
src/main/scala/de/entropia/vapor/daemon/mixer/: Delay.scala  Manager.scala  Mixer.scala  Overlay.scala
src/main/scala/de/entropia/vapor/daemon/server/: Client.scala  Message.scala  Server.scala
src/main/scala/de/entropia/vapor/daemon/util/: Color.scala  UnsignedByte.scala
src/test/scala/de/entropia/vapor/daemon/util/: ColorSuite.scala
vaporware/daemon/: .gitignore  LICENSE  README.rst  build.sbt
vaporware/daemon/project/: build.sbt
vaporware/daemon/src/main/resources/: application.conf  logback.xml
vaporware/daemon/src/main/scala/de/entropia/vapor/daemon/: Application.scala
vaporware/daemon/src/main/scala/de/entropia/vapor/daemon/config/: Settings.scala
vaporware/daemon/src/main/scala/de/entropia/vapor/daemon/hardware/: Buffer.scala  Encoder.scala  Framer.scala  Hardware.scala  HardwareError.scala  Mapping.scala  Physical.scala
vaporware/emulator/: emulator.py
vaporware/emulator/samples/: rgb.txt
vaporware/language_bindings/JavaScript/: LICENSE  example.js  index.js  package.json
vaporware/language_bindings/cpp/: .gitignore  CMakeLists.txt  README.md
vaporware/language_bindings/cpp/src/: CMakeLists.txt
vaporware/language_bindings/cpp/src/blinker/: CMakeLists.txt  core.cpp  core.hpp  main.cpp  settings.cpp  settings.hpp
vaporware/language_bindings/cpp/src/fade/: CMakeLists.txt  color_calculation.cpp  color_calculation.hpp  main.cpp
vaporware/language_bindings/cpp/src/lib/: CMakeLists.txt  client.cpp  client.hpp  rgba_color.cpp  rgba_color.hpp
vaporware/language_bindings/cpp/src/shell/: CMakeLists.txt  commands.cpp  commands.hpp  console.cpp  console.hpp  main.cpp
vaporware/language_bindings/cpp/src/torture/: CMakeLists.txt  main.cpp
vaporware/language_bindings/cpp/src/util/: CMakeLists.txt  colors.cpp  colors.hpp  ids.cpp  ids.hpp  signalhandling.cpp  signalhandling.hpp
vaporware/language_bindings/go/: rainbow.go
vaporware/language_bindings/go/vaporlight/: vaporlight.go
vaporware/language_bindings/java/src/de/entropia/: BubbleSort.java  VaporLight.java
vaporware/language_bindings/python/: all-on.py  fade.py  fegefeuerchen.py  fegefeuerchen_calm.py  latency_test.py  llvp.py  login.py  rainbow.py  rainbow2.py  rgb_lauflicht.py  rgb_lauflicht_smooth.py  schattenspiel.py
vaporware/language_bindings/rust/rainbow/: Cargo.toml
vaporware/language_bindings/rust/rainbow/src/: main.rs
vaporware/language_bindings/rust/vaporlight/: Cargo.toml
vaporware/language_bindings/rust/vaporlight/src/: lib.rs
vaporware/led-boards/: .gitignore  LICENSE  Makefile  color.c  color.h  command.c  command.h  config.c  config.h  console.c  console.h  console_prompt.c  console_prompt.h  console_wp.c  console_wp.h  debug.c  debug.h  error.c  error.h  fail.c  fail.h  fixedpoint.c  fixedpoint.h  flash.c  flash.h  flash.sh  gamma.c  gamma.h  heat.c  heat.h  led.c  led.h  linker.ld  macros.h  main.c  main.h  make_gamma_table.py  pwm.c  pwm.h  startup.c  (+10 more)
vaporware/led-boards/stm_include/cm3/: common.h  fpb.h  itm.h  memorymap.h  scs.h  tpiu.h
vaporware/led-boards/stm_include/stm32/: adc.h  bkp.h  can.h  crc.h  dbgmcu.h  dma.h  ethernet.h  exti.h  flash.h  fsmc.h  gpio.h  i2c.h  iwdg.h  memorymap.h  nvic.h  otg_fs.h  pwr.h  rcc.h  rtc.h  scb.h  spi.h  systick.h  timer.h  tools.h  usart.h  usb.h  usb_desc.h  wwdg.h
vaporware/updater/: Makefile  updater.c
vaporware/util/: version-color.py
(+15 files in other folders)
