add_subdirectory(lib)
add_subdirectory(util)

if(BUILD_SHELL MATCHES ON)
	add_subdirectory(shell)
else()
	message("Won't build the shell")
endif()

if(BUILD_FADE MATCHES ON)
	add_subdirectory(fade)
else()
	message("Won't build the fade-program")
endif()

if(BUILD_TORTURE MATCHES ON)
	add_subdirectory(torture)
else()
	message("Won't build the torture-program")
endif()
